le menu est fixe pour les versions tablettes et pc

--- a/newindex.html
+++ b/newindex.html
@@ -128,7 +128,7 @@ z-index:10;
   }
   
   .centerNav{
-		overflow:scroll;
+
   }
   
   .header{
@@ -157,8 +157,7 @@ z-index:10;
 	
   }
   .centerNav{
-		margin-left:auto;
-		margin-right:auto;
+		margin-left:220px;
   }
   .headerContent{
 	background-size: 40% 90% !important;
@@ -171,6 +170,7 @@ z-index:10;
    .menu{
 	width:400px;
 	font-size:15px;
+	position:fixed;
    }
   
    .menu .list-group{
@@ -183,7 +183,7 @@ z-index:10;
   
   	.content{
 		width:100%;
-		}
+	}
 		
 	.menu{
 	width:200px;
@@ -215,6 +215,9 @@ z-index:10;
 	font-size:15px;
    }
 
+   .centerNav{
+		margin-left:420px;
+  }
   
   .list-group-item{
 		padding: 10px 15px;
